--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,7 @@
 <head>
     <title>Famous Templates</title>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+
+    <link rel="shortcut icon" href="/img/favicon.png" />
 </head>
